implementation: CI/CD deployment in azure API, SpiderWatcher database deployment

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,6 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
+    //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
+    "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://api20240327133220.azurewebsites.net:80"
+      },
+      "Https": {
+        "Url": "https://api20240327133220.azurewebsites.net:443"
+      }
+    }
   }
 }
