Add: Login user.

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -8,14 +8,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
+    //"SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
     "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
   },
   "Kestrel": {
     "Endpoints": {
       "Http": {
+        //"Url": "http://0.0.0.0:80"
         "Url": "http://api20240327133220.azurewebsites.net:80"
       },
       "Https": {
+        //"Url": "https://0.0.0.0:443"
         "Url": "https://api20240327133220.azurewebsites.net:443"
       }
     }
