--- a/Presenters/Presenters.csproj
+++ b/Presenters/Presenters.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\UseCasesPort\UseCasesPort.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Category\" />
+  </ItemGroup>
+
 </Project>
