edit: Dependency Container use cases in microservices

--- a/Controler/Controler.csproj
+++ b/Controler/Controler.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\UseCasesPort\UseCasesPort.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CategoryContentController\" />
+  </ItemGroup>
+
 </Project>
