--- a/ApiUser/appsettings.json
+++ b/ApiUser/appsettings.json
@@ -15,11 +15,11 @@
     "Endpoints": {
       "Http": {
         //"Url": "http://0.0.0.0:80"
-        "Url": "http://spiderwatcherapiuser.azurewebsites.net:80"
+        "Url": "http://apispiderwatcheruser.azurewebsites.net:80"
       },
       "Https": {
         //"Url": "https://0.0.0.0:443"
-        "Url": "https://spiderwatcherapiuser.azurewebsites.net:443"
+        "Url": "https://apispiderwatcheruser.azurewebsites.nets:443"
       }
     }
   }
