CI/CD api HistoryPlayback

--- a/ApiHistoryPlayback/appsettings.json
+++ b/ApiHistoryPlayback/appsettings.json
@@ -14,12 +14,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://0.0.0.0:80"
-        //"Url": "http://api20240327133220.azurewebsites.net:80"
+        //"Url": "http://0.0.0.0:80"
+        "Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:80"
       },
       "Https": {
-        "Url": "https://0.0.0.0:443"
-        //"Url": "https://api20240327133220.azurewebsites.net:443"
+        //"Url": "https://0.0.0.0:443"
+        "Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:443"
       }
     }
   }
