Edit: .http and .json configuration

--- a/ApiUser/appsettings.json
+++ b/ApiUser/appsettings.json
@@ -19,7 +19,7 @@
       },
       "Https": {
         //"Url": "https://0.0.0.0:443"
-        "Url": "https://apispiderwatcheruser.azurewebsites.nets:443"
+        "Url": "https://apispiderwatcheruser.azurewebsites.net:443"
       }
     }
   }
