--- a/ApiCategory/appsettings.json
+++ b/ApiCategory/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
+    //"SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
+    "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        //"Url": "http://0.0.0.0:80"
+        "Url": "http://apispiderwatchercategory.azurewebsites.net:80"
+      },
+      "Https": {
+        //"Url": "https://0.0.0.0:443"
+        "Url": "https://apispiderwatchercategory.azurewebsites.net:443"
+      }
+    }
+  }
 }
