--- a/ApiCategoryContent/appsettings.json
+++ b/ApiCategoryContent/appsettings.json
@@ -15,11 +15,11 @@
     "Endpoints": {
       "Http": {
         "Url": "http://0.0.0.0:80"
-        //"Url": "http://apispiderwatchercontent.azurewebsites.net:80"
+        //"Url": "http://apispiderwatchercategorycontent.azurewebsites.net:80"
       },
       "Https": {
-        "Url": "https://0.0.0.0:443",
-        //"Url": "https://apispiderwatchercontent.azurewebsites.net:443"
+        "Url": "https://0.0.0.0:443"
+        //"Url": "https://apispiderwatchercategorycontent.azurewebsites.net:443"
       }
     }
   }
