--- a/ApiUser/appsettings.json
+++ b/ApiUser/appsettings.json
@@ -8,18 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
-    //"SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
-    "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
+    "SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
+    //"SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
   },
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        //"Url": "http://0.0.0.0:8080"
-        "Url": "http://apispiderwatcheruser.azurewebsites.net:80"
+        "Url": "http://localhost:8085"
+        //"Url": "http://apispiderwatcheruser.azurewebsites.net:80"
       },
       "Https": {
-        //"Url": "https://0.0.0.0:4430"
-        "Url": "https://apispiderwatcheruser.azurewebsites.net:443"
+        "Url": "https://localhost:4430"
+        //"Url": "https://apispiderwatcheruser.azurewebsites.net:4435"
       }
     }
   },
