--- a/ApiHistoryPlayback/appsettings.json
+++ b/ApiHistoryPlayback/appsettings.json
@@ -8,18 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
-    //"SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
-    "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
+    "SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
+    //"SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
   },
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        //"Url": "http://0.0.0.0:80"
-        "Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:80"
+        "Url": "http://localhost:8084"
+        //"Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:80"
       },
       "Https": {
-        //"Url": "https://0.0.0.0:443"
-        "Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:443"
+        "Url": "https://0.0.0.0:4434"
+        //"Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:443"
       }
     }
   }
