--- a/ApiCategory/appsettings.json
+++ b/ApiCategory/appsettings.json
@@ -8,18 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
-    "SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
-    //"SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
+    //"SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
+    "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
   },
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:8081"
-        //"Url": "http://apispiderwatchercategory.azurewebsites.net:80"
+        //"Url": "http://localhost:8081"
+        "Url": "http://apispiderwatchercategory.azurewebsites.net:80"
       },
       "Https": {
-        "Url": "https://localhost:4431"
-        //"Url": "https://apispiderwatchercategory.azurewebsites.net:443"
+        //"Url": "https://localhost:4431"
+        "Url": "https://apispiderwatchercategory.azurewebsites.net:443"
       }
     }
   }
