--- a/ApiUser/appsettings.json
+++ b/ApiUser/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SpiderWatcherMSQL": "MSSQL_SPIDERWATCHER_CONNECTION"
-    //"SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
-    "SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
+    "SpiderWatcherMSQL": "Server=localhost;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=12345678;TrustServerCertificate=true"
+    //"SpiderWatcherMSQL": "Server=desarrollouv.database.windows.net;Initial Catalog=SpiderWatcher;User ID=SpiderUser;Password=Spiderwatcher*"
   },
   "Kestrel": {
     "Endpoints": {
