--- a/TestSpiderWatcher/TestSpiderWatcher.csproj
+++ b/TestSpiderWatcher/TestSpiderWatcher.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
@@ -24,6 +25,8 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
     <ProjectReference Include="..\RepositoryEFCore\RepositoryEFCore.csproj" />
     <ProjectReference Include="..\RepositoryEmail\RepositoryEmail.csproj" />
+    <ProjectReference Include="..\UseCasesPort\UseCasesPort.csproj" />
+    <ProjectReference Include="..\UseCases\UseCases.csproj" />
   </ItemGroup>
 
   <ItemGroup>
