Edit: ports appsettings

--- a/ApiCategory/appsettings.json
+++ b/ApiCategory/appsettings.json
@@ -14,12 +14,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:8081"
-        //"Url": "http://apispiderwatchercategory.azurewebsites.net:80"
+        //"Url": "http://localhost:8081"
+        "Url": "http://apispiderwatchercategory.azurewebsites.net:80"
       },
       "Https": {
-        "Url": "https://localhost:4431"
-        //"Url": "https://apispiderwatchercategory.azurewebsites.net:443"
+        //"Url": "https://localhost:4431"
+        "Url": "https://apispiderwatchercategory.azurewebsites.net:443"
       }
     }
   }
