--- a/ApiCategoryContent/appsettings.json
+++ b/ApiCategoryContent/appsettings.json
@@ -14,12 +14,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:8082"
-        //"Url": "http://apispiderwatchercategorycontent.azurewebsites.net:80"
+        //"Url": "http://localhost:8082"
+        "Url": "http://apispiderwatchercategorycontent.azurewebsites.net:80"
       },
       "Https": {
-        "Url": "https://localhost:4432"
-        //"Url": "https://apispiderwatchercategorycontent.azurewebsites.net:443"
+        //"Url": "https://localhost:4432"
+        "Url": "https://apispiderwatchercategorycontent.azurewebsites.net:443"
       }
     }
   }
