--- a/ApiHistoryPlayback/appsettings.json
+++ b/ApiHistoryPlayback/appsettings.json
@@ -14,12 +14,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:8084"
-        //"Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:80;"
+        //"Url": "http://localhost:8084"
+        "Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:80;"
       },
       "Https": {
-        "Url": "https://localhost:4434"
-        //"Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:443"
+        //"Url": "https://localhost:4434"
+        "Url": "https://apispiderwatcherhistoryplayback.azurewebsites.net:443"
       }
     }
   }
