Update:  update user container

--- a/ApiContent/appsettings.json
+++ b/ApiContent/appsettings.json
@@ -14,12 +14,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        //"Url": "http://localhost:8083"
-        "Url": "http://apispiderwatchercontent.azurewebsites.net:80"
+        "Url": "http://localhost:8083"
+        //"Url": "http://apispiderwatchercontent.azurewebsites.net:80"
       },
       "Https": {
-        //"Url": "https://localhost:4433",
-        "Url": "https://apispiderwatchercontent.azurewebsites.net:443"
+        "Url": "https://localhost:4433"
+        //"Url": "https://apispiderwatchercontent.azurewebsites.net:443"
       }
     }
   }
