Edit: appseting.json

--- a/ApiUser/appsettings.json
+++ b/ApiUser/appsettings.json
@@ -14,12 +14,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:8080"
-        //"Url": "http://apispiderwatcheruser.azurewebsites.net:80"
+        //"Url": "http://localhost:8080"
+        "Url": "http://apiuser20240919141944.azurewebsites.net:80"
       },
       "Https": {
-        "Url": "https://localhost:4430"
-        //"Url": "https://apispiderwatcheruser.azurewebsites.net:443"
+        //"Url": "https://localhost:4430"
+        "Url": "https://apiuser20240919141944.azurewebsites.net:443"
       }
     }
   },
