--- a/ApiUser/Properties/launchSettings.json
+++ b/ApiUser/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5131"
+      "applicationUrl": "http://apiuser20240919141944.azurewebsites.net"
     },
     "https": {
       "commandName": "Project",
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7227;http://localhost:5131"
+      "applicationUrl": "https://apiuser20240919141944.azurewebsites.net"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -45,7 +45,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44425",
+      "applicationUrl": "http://apiuser20240919141944.azurewebsites.net",
       "sslPort": 44346
     }
   }
